# CustomNeuralNetwork

./: .gitignore  CMakeLists.txt
include/: Layer.h  LossOps.h  MatrixOps.h  NeuralNet.h  Utils.h
src/: Layer.cu  LossOps.cu  MatrixOps.cu  NeuralNet.cu  Utils.cpp  main.cpp
tests/: cuda_tests.cu  test_LossFuncs.cpp  test_MatrixOps.cpp  test_NN.cpp  test_layer.cpp
